force-app/main/default/objects/cgcloud__CP_Pricing_Context_Definition__c/cgcloud__CP_Pricing_Context_Definition__c.object-meta.xml
<CustomObject>
    <description>The pricing context definition object is used to add additional data/fields to the pricing context object used by penny perfect pricing calculation.</description>
    <label>Pricing Context Definition</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Context Definition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>