force-app/main/default/objects/cgcloud__CP_Pricing_Context_Definition__c/fields/cgcloud__Context_Section__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Context_Section__c</fullName>
    <description>The section of the penny perfect pricing context in which the new field is added.</description>
    <inlineHelpText>The section of the penny perfect pricing context in which the new field is added.</inlineHelpText>
    <label>Context Section</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CustomerInformation</fullName>
                <label>Customer Information</label>
            </value>
            <value>
                <fullName>ProductInformation</fullName>
                <label>Product Information</label>
            </value>
            <value>
                <fullName>OrderInformation</fullName>
                <label>Order Information</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>