force-app/main/default/objects/cgcloud__CP_Pricing_Context_Definition__c/fields/cgcloud__Field_Alias__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Alias__c</fullName>
    <description>The alias name of the field, which is the same for the data source of offline and online mobile applications.</description>
    <inlineHelpText>The alias name of the field, which is the same for the data source of offline and online mobile applications.</inlineHelpText>
    <label>Field Alias</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>