force-app/main/default/objects/cgcloud__CP_Pricing_Context_Definition__c/fields/cgcloud__Fieldname__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fieldname__c</fullName>
    <description>The API name of the field with the namespace.</description>
    <inlineHelpText>The API name of the field with the namespace.</inlineHelpText>
    <label>Reference Field Name</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>