force-app/main/default/objects/cgcloud__CP_Pricing_Context_Definition__c/fields/cgcloud__Source__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Source__c</fullName>
    <description>Name of the sObject from where the data is read.</description>
    <inlineHelpText>Name of the sObject from where the data is read.</inlineHelpText>
    <label>Source Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cgcloud__Context_Section__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>AccountExtension</fullName>
                <label>Account Extension</label>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>OrderItems</fullName>
                <label>Order Items</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>