force-app/main/default/objects/cgcloud__CP_Pricing_Context_Definition__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Context_Section__c</columns>
    <columns>cgcloud__Source__c</columns>
    <columns>cgcloud__Fieldname__c</columns>
    <columns>cgcloud__Field_Alias__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>